--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = "drop"
-        gdxVersion = '1.12.2-SNAPSHOT'
+        gdxVersion = '1.12.1'
         roboVMVersion = '2.3.20'
         box2DLightsVersion = '1.5'
         ashleyVersion = '1.7.4'
